tests/negative/test_fnc_variad_not_last.orb
fnc foo (x:i32 ... y:i32) ();

fnc main () () {};